--- a/main/static/main/styles/test_result.css
+++ b/main/static/main/styles/test_result.css
@@ -53,3 +53,25 @@
 	font-size: 20px;
 	color: #fff;
 }
+
+.btn {
+	display: block;
+	width: 50%;
+	padding: 10px;
+	font-family: 'Raleway';
+	font-size: 16px;
+	font-weight: 600;
+	text-decoration: none;
+	text-align: center;
+	color: white;
+	background: #AF66D5;
+	border: none;
+	transition: .5s;
+	border-radius: 5px;
+}
+
+.btn:hover {
+	cursor: pointer;
+	background: #7309AA;
+	transition: .5s;
+}
