--- a/main/templates/main/result_test.html
+++ b/main/templates/main/result_test.html
@@ -35,6 +35,7 @@
 			{% endfor %}
 		</div>
 		{% endfor %}
+		<a href="{% url 'index' %}" class="btn">Вернуться на главную</a>
 	</div>
 </div>
 {% endblock %}
