Fixed error in module edit

--- a/main/templates/main/module_edit.html
+++ b/main/templates/main/module_edit.html
@@ -24,7 +24,7 @@
 		{% endif %}
 		{% for card in formset %}
 		<div class="card form-row">
-
+			{{ card.id }}
 			<div class="delete-card">
 				<i class="fas fa-solid fa-xmark button-delete"></i>
 				<div class="delete-checkbox">{{ card.DELETE }}</div>
